# pargon-framework

./: CMakeLists.txt  README.md
Modules/Application/: CMakeLists.txt
Modules/Application/Include/Pargon/: Application.h
Modules/Application/Source/Core/: Application.cpp  Clipboard.cpp  Loader.cpp
Modules/Application/Source/Win32/: Application.Win32.cpp  Log.Win32.cpp
Modules/Audio/Source/Core/: Sound.cpp
Modules/Containers/Source/Core/: Buffer.cpp
Modules/Debugging/: CMakeLists.txt
Modules/Debugging/Include/Pargon/: Debugging.Win32.h  Debugging.h
Modules/Debugging/Source/Core/: Log.cpp  StackTrace.cpp
Modules/Debugging/Source/Win32/: Log.Win32.cpp  StackTrace.Win32.cpp
Modules/Debugging/Tests/: LogTests.cpp
Modules/Graphics/Source/Core/: GraphicsDevice.cpp  Material.cpp  Renderer.cpp  Texture.cpp
Modules/Graphics/Source/DirectX11/: DirectX11Geometry.cpp  DirectX11Material.cpp  DirectX11Renderer.cpp  DirectX11Texture.cpp
Modules/Project/CMake/: add_pargon_application.cmake  add_pargon_dependency.cmake  add_pargon_integration.cmake  add_pargon_module.cmake  set_pargon_defaults.cmake
Modules/Serialization/: CMakeLists.txt
Modules/Serialization/Tests/: SerializationTests.cpp  SerializationTests.h  SerializerTests.cpp
Modules/Shim/: CMakeLists.txt  README.md
Modules/Shim/Include/Pargon/: Shim.h
Modules/Testing/: CMakeLists.txt
Modules/Types/: CMakeLists.txt
Modules/Types/Tests/: ColorTests.cpp  TypesTests.cpp  TypesTests.h
Samples/Playground/: ApplicationMain.Win32.cpp  CMakeLists.txt  Main.Win32.cpp
Tests/: CMakeLists.txt  main.cpp
(+67 files in other folders)
